# creeper

./: .gitignore  Cargo.toml  README.md  TODO.md  flake.nix
.github/workflows/: build.yml  ci.yml  nightly-release.yml
src/: artifact.rs  artifact.sql  asset.rs  builtin.rs  checksum.rs  dev.rs  fabric.rs  game.rs  http.rs  id.rs  index.rs  inst.rs  install.rs  jar.rs  java.rs  launch.rs  lib.rs  lock.rs  main.rs  maven.rs  mc.rs  ms.rs  neoforge.rs  pack.rs  path.rs  pbar.rs  prelude.rs  pubgrub.rs  registry.rs  storage.rs  storage.sql  tool.rs  user.rs  util.rs  vanilla.rs  yggdrasil.rs  zip.rs
src/artifact/: db.rs  download.rs  init.sql  mod.rs  parallel.rs
src/cmd/: add.rs  build_index.rs  complete.rs  init.rs  install.rs  launch.rs  login.rs  mod.rs  nf_version.rs  nuke.rs  prelude.rs  run.rs
src/fabric/: meta.rs  meta_api.rs  mod.rs  prelude.rs
src/ms/: mcsvc.rs  mod.rs  oauth.rs  xbox.rs
src/neoforge/: container.rs  fmt.rs  install_profile.rs  meta.rs  mod.rs  prelude.rs  server.rs
src/tool/: build_index.rs  download.rs  index_fabric.rs  mod.rs  pack_fabric_mod.rs  pack_nf_mod.rs  prelude.rs
src/vanilla/: meta.rs  mod.rs  prelude.rs  rule.rs  server.rs
