[package]
name = "creeper"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Minecraft Package Manager"
documentation = "https://github.com/misaka10987/creeper"
homepage = "https://github.com/misaka10987/creeper"
repository = "https://github.com/misaka10987/creeper"
readme = "README.md"
keywords = ["minecraft", "launcher", "mc", "package", "manager"]
license = "MIT"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
semver = { version = "1.0.26", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
stop = { path = "../stop" }
walkdir = "2.5.0"
serde-inline-default = "0.2.3"
tokio = { version = "1.47.1", features = ["fs", "rt-multi-thread", "tracing"] }
mc-launchermeta = "0.1.1"
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json"] }
ring = "0.17.14"
const-hex = "1.15.0"
tracing-indicatif = "0.3.13"
indicatif = "0.18.0"
blake3 = "1.8.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
