[package]
name = "creeper"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Minecraft Package Manager"
documentation = "https://github.com/misaka10987/creeper"
homepage = "https://github.com/misaka10987/creeper"
repository = "https://github.com/misaka10987/creeper"
readme = "README.md"
keywords = ["minecraft", "launcher", "mc", "package", "manager"]
license = "MIT"


[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.3"
stop = "0.2.0"
walkdir = "2.5.0"
serde-inline-default = "1.0.1"
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread", "tracing"] }
mc-launchermeta = "0.1.1"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json"] }
ring = "0.17.14"
const-hex = "1.18.0"
tracing-indicatif = "0.3.14"
indicatif = "0.18.4"
blake3 = "1.8.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
serde_with = "3.16.1"
spdx = "0.13.2"
