[package]
name = "creeper"
version = "1.0.0-alpha.10"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Minecraft Package Manager"
documentation = "https://github.com/misaka10987/creeper"
homepage = "https://github.com/misaka10987/creeper"
repository = "https://github.com/misaka10987/creeper"
readme = "README.md"
keywords = ["minecraft", "launcher", "mc", "package", "manager"]
license = "MIT"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
semver = { version = "1.0.28", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
stop = "0.2.0"
walkdir = "2.5.0"
serde-inline-default = "1.0.1"
tokio = { version = "1.52.3", features = [
    "fs",
    "rt-multi-thread",
    "tracing",
    "process",
] }
mc-launchermeta = "0.1.1"
dirs = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }
ring = "0.17.14"
const-hex = "1.19.1"
tracing-indicatif = "0.3.14"
indicatif = "0.18.4"
blake3 = "1.8.5"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
serde_with = "3.21.0"
spdx = "0.13.4"
url = { version = "2.5.8", features = ["serde"] }
pubgrub = "0.4.0"
creeper-semver-pubgrub = "0.4.0"
inquire = { version = "0.9.4", features = ["editor"] }
base64 = "0.22.1"
petgraph = "0.8.3"
indexmap = { version = "2.14.0", features = ["serde"] }
async_zip = { version = "0.0.18", features = ["full"] }
strfmt = "0.2.5"
tokio-util = { version = "0.7.18", features = ["compat"] }
futures = "0.3.32"
parse-display = "0.11.0"
uuid = { version = "1.23.4", features = ["serde"] }
oauth2 = "5.0.0"
open = "5.3.6"
local-redirect-uri = "0.1.0"
chrono = { version = "0.4.45", features = ["serde"] }
clap_complete = "4.6.7"
clap_complete_nushell = "4.6.0"
shellexpand = { version = "3.1.2", default-features = false, features = [
    "base-0",
] }
